style background and update name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Dubs Visualize</title>
+    <title>Dubs Visualizer</title>
     <link rel="stylesheet" href="./assets/shotchart.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
   </head>
@@ -10,7 +10,7 @@
 
     <div id='shotchart'>
       <div id='header'>
-        <h1>Dubs Visualize</h1>
+        <h1>Dubs Visualizer</h1>
         <div id='select-filters'>
           <div id='season-slider-container'>
             <h3>Select a season:</h3>
