add linkedin and github links

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </div>
       <script src='bundle.js'></script>
     </div>
-
+    <div class="linkedin-github">
+       <a href="https://www.linkedin.com/in/mike-salisbury-4116b74b/" target="_blank"><div class="linkedin"></div></a>
+       <a href="https://github.com/MikeSalisbury" target="_blank"><div class="github"></div></a>
+   </div>
   </body>
 </html>
